# boilerplate

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0f30c139051e_create_users_table.py
src/: app.py  resource.py  resources.py
src/routers/: hello_world.py  user.py
src/schemas/: user.py
tests/: conftest.py  test_hello_world.py
tests/test_users/: test_create.py  test_db.py  test_delete.py  test_list.py  test_update.py
