[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = ""
authors = ["Anderson Marques <andersonoanjo18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
Hypercorn = "^0.16.0"
loguru = "^0.7.2"
uvloop = "^0.19.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.1.0"
alt-pytest-asyncio = "^0.7.2"
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
